fixes booking modal display on mobile

--- a/app/public/wp-content/themes/matriarchy-build/assets/scss/components/_booking-dialog.scss
+++ b/app/public/wp-content/themes/matriarchy-build/assets/scss/components/_booking-dialog.scss
@@ -9,6 +9,12 @@
 
 .ui-dialog.booking-dialog {
     display: block;
-    min-width: 800px;
-    max-width: 90%;
+    margin: 0 2.5%;
+    max-width: 95%;
+
+    @include media-breakpoint-up(lg) {
+        margin: 0 auto;
+        min-width: 800px;
+        max-width: 90%;
+    }
 }
